--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "snowpack dev",
+    "build": "snowpack build",
     "build-ts": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "macfrei",
   "license": "ISC",
   "devDependencies": {
+    "@snowpack/plugin-webpack": "^2.3.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "snowpack": "^3.0.11"
   }
 }
