--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "start": "snowpack dev",
     "build": "snowpack build",
     "build-ts": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "macfrei",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.13",
     "@snowpack/plugin-webpack": "^2.3.0",
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-links": "^6.1.17",
+    "@storybook/html": "^6.1.17",
+    "babel-loader": "^8.2.2",
     "typescript": "^4.1.3"
   },
   "dependencies": {
